[package]
name = "quest"
description = "country quizzer"
version = "0.1.0"
authors = ["Jose Thomas <jostho@gmail.com>"]
repository = "https://github.com/jostho/quest"
license = "Apache-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.1"
clap = "2.33.0"
rand = "0.7"
